hecho, centrado, lanzar

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 
-<body class="bg-danger ">
-  <!-- particles.js container -->
-  <!-- <div id="particles-js"></div> -->
+<body >
+  <div class="containergeneral"  id="particles-js">
+    
+  
+  </div>
   <div class="containnavbar"  >
     <!---Nabvar--->
     <nav class="barra-navegacion navbar navbar-expand-lg navbar-light bg-light">
@@ -52,15 +54,12 @@
     </nav>
   </div>
 
-  <div class="containergeneral"  id="particles-js">
-    
-    </nav>
-  </div>
 
 
-  <div >
+
+  <div class="contenedorsecciones" >
     <!---intro--->
-    <section class="secciones" id="intro">
+    <section class="secciones" id="intro" >
       <div class="general col-12 d-flex ">
         <div class="photo col-6 p-0 ">
           <img src="../img/yo/primera.jpg" class="imgintro">
