--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
               <h2>Desarrollo Profesional</h2>
             </section>
             <div class="col-12 desarrollop">
-              <div class="col-12 botondescargar">
+              <div class=" botondescargar">
                 <a class="btn  btn-success " role="button" href="../document/NAICEIRY.pdf">Descargar
                   Curriculum</a>
               </div>
