--- a/index.html
+++ b/index.html
@@ -11,18 +11,43 @@
   <link rel="stylesheet" media="screen" href="css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/all.min.css" rel ="stylesheet">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
 </head>
 
 <body >
   <div class="dlc">
   <div class="containergeneral"  id="particles-js"></div>
         <div class="containnavbar"  >
+          <nav >
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+              <i class="fa-solid fa-bars"></i>
+            </label>
+            <a href="#" class="enlace">
+              <img src="../img/women-in-tech.jpg" alt="" class="logo">
+            </a>
+            <ul >
+              <li class="active">
+                <a class="active" href="#sobrem">Sobre mi </a>
+              </li>
+              <li >
+                <a  href="#habi">Mis Habilidades</a>
+              </li>
+              <li >
+                <a href="#profesional">Desarrollo Profesional</a>
+              </li>
+              <li >
+                <a href="#portfolio">Proyectos</a>
+              </li>
+              <li >
+                <a  href="#contacto">Contacto</a>
+              </li>
+            </ul>
+          </nav>
           <!---Nabvar--->
-          <nav class="barra-navegacion navbar navbar-expand-lg navbar-light bg-light">
+          <!-- <nav class="barra-navegacion navbar navbar-expand-lg navbar-light bg-light">
             <div class=" col-4">
               <a class="navbar-brand" href="#intro"><img src="../img/women-in-tech.jpg">N@y</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
@@ -49,7 +74,8 @@
                 </li>
               </ul>
             </div>
-          </nav>
+          </nav> -->
+
         </div>
 
 
