--- a/index.html
+++ b/index.html
@@ -11,39 +11,27 @@
   <link rel="stylesheet" media="screen" href="css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/all.min.css" rel ="stylesheet">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  
 
 </head>
 
 <body >
   <div class="dlc">
   <div class="containergeneral"  id="particles-js"></div>
-        <div class="containnavbar"  >
           <nav >
-            <input type="checkbox" id="check">
+            <input type="checkbox" id="check"/>
             <label for="check" class="checkbtn">
-              <i class="fa-solid fa-bars"></i>
+              <img src="img/portafolio/ham.png"  alt="">
             </label>
             <a href="#" class="enlace">
               <img src="../img/women-in-tech.jpg" alt="" class="logo">
             </a>
             <ul >
-              <li class="active">
-                <a class="active" href="#sobrem">Sobre mi </a>
-              </li>
-              <li >
-                <a  href="#habi">Mis Habilidades</a>
-              </li>
-              <li >
-                <a href="#profesional">Desarrollo Profesional</a>
-              </li>
-              <li >
-                <a href="#portfolio">Proyectos</a>
-              </li>
-              <li >
-                <a  href="#contacto">Contacto</a>
-              </li>
+              <li><a class="active" href="#sobrem">Sobre mi </a></li>
+              <li > <a  href="#habi">Mis Habilidades</a></li>
+              <li ><a href="#profesional">Desarrollo Profesional</a></li>
+              <li > <a href="#portfolio">Proyectos</a></li>
+              <li><a  href="#contacto">Contacto</a> </li>
             </ul>
           </nav>
           <!---Nabvar--->
@@ -75,12 +63,6 @@
               </ul>
             </div>
           </nav> -->
-
-        </div>
-
-
-
-
       <div class="contenedorsecciones" >
           <!---intro--->
           <section class="secciones p-0" id="intro"  >
