--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Vincent Garreau" />
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" media="screen" href="css/style.css">
+  <link rel="stylesheet" media="screen" href="style.scss">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   
@@ -24,7 +24,7 @@
               <img src="img/portafolio/ham.png"  alt="">
             </label>
             <a href="#" class="enlace">
-              <img src="../img/women-in-tech.jpg" alt="" class="logo">
+              <img src="img/women-in-tech.jpg" alt="" class="logo">
             </a>
             
             <ul >
