--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html >
 
 <head>
   <meta charset="utf-8">
@@ -16,7 +16,7 @@
 </head>
 
 <body >
-  <div class="container-fluid">
+  <div class="container-fluid d-flex">
  
   <div   id="particles-js"></div>
           <nav  id="nav">
@@ -325,5 +325,4 @@
     </script>
 </div>
 </body>
-
 </html>
