--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html >
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -16,9 +16,8 @@
 </head>
 
 <body >
-  <div class="container-fluid d-flex">
- 
-  <div   id="particles-js"></div>
+  <div class="dlc">
+  <div class="containergeneral"  id="particles-js"></div>
           <nav  id="nav">
             <input type="checkbox" id="check"/>
             <label for="check" class="checkbtn">
@@ -43,7 +42,7 @@
           <section class="secciones p-0" id="intro"  >
             <div class="general col-12 d-flex p-0">
               <div class="photo col-6 p-0">
-                <img src="../img/yo/primera.jpg" class="imgintro">
+                <img src="img/yo/primera.jpg" class="imgintro">
               </div>
               <div class="name col-8 p-0 ">
                 <h1 id="title">Hola!</h1>
@@ -97,19 +96,19 @@
             <div class="minicontent">
               <h2>Programacion</h2>
                 <div class="front">
-                    <abbr title="REACT"><img src="../img/Programacion/js.png" class="habilidades" id="react"></abbr>
-                    <abbr title="HTML 5"><img src="../img/Programacion/html5.png" class="habilidades" id="html"></abbr>
-                    <abbr title="CSS"><img src="../img/Programacion/css.png" class="habilidades" id="css"></abbr>
-                    <abbr title="REACT"><img src="../img/Programacion/react.png" class="habilidades" id="react"></abbr>
-                    <abbr title="bootstrap"><img src="../img/Programacion/bootstrap.png" class="habilidades"></abbr>
+                    <abbr title="REACT"><img src="img/Programacion/js.png" class="habilidades" id="react"></abbr>
+                    <abbr title="HTML 5"><img src="img/Programacion/html5.png" class="habilidades" id="html"></abbr>
+                    <abbr title="CSS"><img src="img/Programacion/css.png" class="habilidades" id="css"></abbr>
+                    <abbr title="REACT"><img src="img/Programacion/react.png" class="habilidades" id="react"></abbr>
+                    <abbr title="bootstrap"><img src="img/Programacion/bootstrap.png" class="habilidades"></abbr>
                 </div>
               <div class="front">
                 <div>
-                  <abbr title="Python"><img src="../img/Programacion/python.png" class="habilidades"></abbr>
-                  <abbr title="PHP"><img src="../img/Programacion/php.png" class="habilidades"></abbr>
-                  <abbr title="Flux"><img src="../img/Programacion/flux.png" class="habilidades"></abbr>
-                  <abbr title="JEST"><img src="../img/Programacion/jest.png" class="habilidades"></abbr>
-                  <abbr title="Flask"><img src="../img/Programacion/flask.png" class="habilidades"></abbr>
+                  <abbr title="Python"><img src="img/Programacion/python.png" class="habilidades"></abbr>
+                  <abbr title="PHP"><img src="img/Programacion/php.png" class="habilidades"></abbr>
+                  <abbr title="Flux"><img src="img/Programacion/flux.png" class="habilidades"></abbr>
+                  <abbr title="JEST"><img src="img/Programacion/jest.png" class="habilidades"></abbr>
+                  <abbr title="Flask"><img src="img/Programacion/flask.png" class="habilidades"></abbr>
                 </div>
               </div>
               <div class="front">
@@ -122,10 +121,10 @@
               </div>
               <DIV class="front">
                 <div>
-                  <abbr title="github"><img src="../img/Programacion/goth.png" class="habilidades"></abbr>
-                  <abbr title="Git"><img src="../img/Programacion/git.png" class="habilidades"></abbr>
-                  <abbr title="Insomnia"><img src="../img/Programacion/insomnia.png" class="habilidades"></abbr>
-                  <abbr title="Postman"><img src="../img/Programacion/postman.png" class="habilidades"></abbr>
+                  <abbr title="github"><img src="img/Programacion/goth.png" class="habilidades"></abbr>
+                  <abbr title="Git"><img src="img/Programacion/git.png" class="habilidades"></abbr>
+                  <abbr title="Insomnia"><img src="img/Programacion/insomnia.png" class="habilidades"></abbr>
+                  <abbr title="Postman"><img src="img/Programacion/postman.png" class="habilidades"></abbr>
                 </div>
               </DIV>
           </div>
@@ -133,24 +132,24 @@
             <div class="minicontent">
               <h2>Diseño Grafico</h2>
               <div class="front  cdg">
-                <abbr title="Adobe"><img src="../img/DiseñoGrafico/adobe.png" class="dg"></abbr>
-                <abbr title="aftereffect"><img src="../img/DiseñoGrafico/aftereffect.png" class="dg"></abbr>
-                <abbr title="ailustrator"><img src="../img/DiseñoGrafico/ailustrator.png" class="dg"></abbr>
+                <abbr title="Adobe"><img src="img/DiseñoGrafico/adobe.png" class="dg"></abbr>
+                <abbr title="aftereffect"><img src="img/DiseñoGrafico/aftereffect.png" class="dg"></abbr>
+                <abbr title="ailustrator"><img src="img/DiseñoGrafico/ailustrator.png" class="dg"></abbr>
 
-                <abbr title="Autocad"><img src="../img/DiseñoGrafico/Autocad.jpg" class="dg"></abbr>
-                <abbr title="CorelDraw"><img src="../img/DiseñoGrafico/coreldraw.jpg" class="dg"></abbr>
-                <abbr title="PhotShop"><img src="../img/DiseñoGrafico/photoshop.png" class="dg"></abbr>
+                <abbr title="Autocad"><img src="img/DiseñoGrafico/Autocad.jpg" class="dg"></abbr>
+                <abbr title="CorelDraw"><img src="img/DiseñoGrafico/coreldraw.jpg" class="dg"></abbr>
+                <abbr title="PhotShop"><img src="img/DiseñoGrafico/photoshop.png" class="dg"></abbr>
               </div>
 
 
             
               <h2>Marketing</h2>
               <div>
-                <abbr title="Gestion de campañas de Marketing"><img src="../img/mar.png" class="marketing"></abbr>
+                <abbr title="Gestion de campañas de Marketing"><img src="img/mar.png" class="marketing"></abbr>
               </div>
               <div>
-                <abbr title="wordpress"><img src="../img/wordpress.svg" class="mark1"> </abbr>
-                <abbr title="SEM"><img src="../img/seo sem.jpg" class="mark2"> </abbr>
+                <abbr title="wordpress"><img src="img/wordpress.svg" class="mark1"> </abbr>
+                <abbr title="SEM"><img src="img/seo sem.jpg" class="mark2"> </abbr>
               </div>
             </div>
           </div>
@@ -165,35 +164,35 @@
             </section>
             <div class="col-12 desarrollop">
               <div class=" botondescargar">
-                <a class="btn  btn-success " role="button" href="../document/NAICEIRY.pdf">Descargar
+                <a class="btn  btn-success " role="button" href="document/NAICEIRY.pdf">Descargar
                   Curriculum</a>
               </div>
               <!-- fabricacion del modal https://www.youtube.com/watch?v=c3MbFWr-NT4  
                                                                                                                 GOOGLE FONT ME ENCANTA -->
               <div class="profesional ">
                 <!-- ---------------------------------------- -->
-                <a href="#" class="cta "> <img src="../img/Profesional/FullStack.jpg"></a>
-                <a href="#" class="ctag"> <img src="../img/Profesional/googleAdwars.jpg"> </a>
-                <a href="#" class="ctaa"> <img src="../img/Profesional/atencionalcliente.jpg"></a>
+                <a href="#" class="cta "> <img src="img/Profesional/FullStack.jpg"></a>
+                <a href="#" class="ctag"> <img src="img/Profesional/googleAdwars.jpg"> </a>
+                <a href="#" class="ctaa"> <img src="img/Profesional/atencionalcliente.jpg"></a>
 
               </div>
 
               <!-- modales---->
               <div class="modal-container">
                 <div class=" modal-close">
-                  <img src="../img/Profesional/FullStack.jpg">
+                  <img src="img/Profesional/FullStack.jpg">
                   <p class="close">X</p>
                 </div>
               </div>
               <div class="modal-containerG">
                 <div class=" modal-close">
-                  <img src="../img/Profesional/googleAdwars.jpg">
+                  <img src="img/Profesional/googleAdwars.jpg">
                   <p class="closeG">X</p>
                 </div>
               </div>
               <div class="modal-containerA">
                 <div class=" modal-close">
-                  <img src="../img/Profesional/atencionalcliente.jpg">
+                  <img src="img/Profesional/atencionalcliente.jpg">
                   <p class="closeA">X</p>
                 </div>
               </div>
@@ -213,12 +212,12 @@
                 <!-- ________________WELLPUT_______________________________ -->
                 <div class="contenedor">
                   <figure>
-                    <img src="../img/portafolio/WPlogo.png" alt="" />
+                    <img src="img/portafolio/WPlogo.png" alt="" />
                     <div class="capa">
                       <h3>Wellput</h3>
                       <p>Alquiler de habitaciones de larga duracion</p>
-                      <a href="https://w3llput.herokuapp.com/"> <img src="../img/globe2.svg" class="logospequeños"></a>
-                      <a href="https://github.com/Naiceiry/WellPut"> <img src="../img/github.svg" class="logospequeños"></a>
+                      <a href="https://w3llput.herokuapp.com/"> <img src="img/globe2.svg" class="logospequeños"></a>
+                      <a href="https://github.com/Naiceiry/WellPut"> <img src="img/github.svg" class="logospequeños"></a>
                     </div>
                   </figure>
                 </div>
@@ -226,22 +225,22 @@
                 <!-- _________________RandonCard______________________________ -->
                 <div class="contenedor">
                   <figure>
-                    <img src="../img/portafolio/RandonCard.png" alt="" />
+                    <img src="img/portafolio/RandonCard.png" alt="" />
                     <div class="capa">
                       <h3>RandonCard</h3>
                       <p>HTML - JS - CSS</p><br>
-                      <a href="https://github.com/Naiceiry/RandomCard"> <img src="../img/github.svg" class="logospequeño1"></a>
+                      <a href="https://github.com/Naiceiry/RandomCard"> <img src="img/github.svg" class="logospequeño1"></a>
                     </div>
                   </figure>
                 </div>
                 <!-- _______________________ToDoList________________________ -->
                 <div class="contenedor">
                   <figure>
-                    <img src="../img/portafolio/To-Do-List-Logo-for-Facebook.jpg" alt="" />
+                    <img src="img/portafolio/To-Do-List-Logo-for-Facebook.jpg" alt="" />
                     <div class="capa">
                       <h3>ToDoList</h3>
                       <p>Lista de Que haceres</p>
-                      <a href="https://github.com/Naiceiry/ToDoList"> <img src="../img/github.svg" class="logospequeño1"></a>
+                      <a href="https://github.com/Naiceiry/ToDoList"> <img src="img/github.svg" class="logospequeño1"></a>
                     </div>
                   </figure>
                 </div>
@@ -250,10 +249,10 @@
               <!-- _______________________Trafic Light________________________ -->
               <div class="contenedor">
                 <figure>
-                  <img src="../img/portafolio/traficligh.png" alt="" />
+                  <img src="img/portafolio/traficligh.png" alt="" />
                   <div class="capa">
                     <h3>Trafic Light</h3>
-                    <a href="https://github.com/Naiceiry/TraficLigh"> <img src="../img/github.svg" class="logospequeño1"></a>
+                    <a href="https://github.com/Naiceiry/TraficLigh"> <img src="img/github.svg" class="logospequeño1"></a>
                   </div>
                 </figure>
               </div>
@@ -261,10 +260,10 @@
                 <!-- _______________________starward________________________ -->
                 <div class="contenedor">
                   <figure>
-                    <img src="../img/portafolio/starward.jpg" alt="" />
+                    <img src="img/portafolio/starward.jpg" alt="" />
                     <div class="capa">
                       <h3>Trafic Light</h3>
-                      <a href="https://github.com/Naiceiry/starward"> <img src="../img/github.svg" class="logospequeño1"></a>
+                      <a href="https://github.com/Naiceiry/starward"> <img src="img/github.svg" class="logospequeño1"></a>
                     </div>
                   </figure>
                 </div>
@@ -276,16 +275,16 @@
               </section>
 
               <div class="contenedorcontacto">
-                <div class="contacto"><a href="mailto:naiceirymp@gmail.com"> <img src="../img/gmail.jpg"></a> </div>
-                <div class="contacto"><a href="https://github.com/Naiceiry"> <img src="../img/Programacion/goth.png"> </a></div>
-                <div class="contacto"><a href="https://api.whatsapp.com/send?phone=+34622142067"> <img src="../img/wsapp.jpg"></a></div>
-                <div class="contacto"><a href="https://www.linkedin.com/in/naiceiry-morales-68681017a/"> <img src="../img/link.png"></a></div>
+                <div class="contacto"><a href="mailto:naiceirymp@gmail.com"> <img src="img/gmail.jpg"></a> </div>
+                <div class="contacto"><a href="https://github.com/Naiceiry"> <img src="img/Programacion/goth.png"> </a></div>
+                <div class="contacto"><a href="https://api.whatsapp.com/send?phone=+34622142067"> <img src="img/wsapp.jpg"></a></div>
+                <div class="contacto"><a href="https://www.linkedin.com/in/naiceiry-morales-68681017a/"> <img src="img/link.png"></a></div>
               </div>
             </div>
   
     <!-- scripts -->
-    <script src="../particles.js"></script>
-    <script src="js/app.js"></script>
+    <script src="particles.js"></script>
+    <script src="app.js"></script>
     <script src="main.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -297,8 +296,7 @@
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"></script>
 
-      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
     <script src="jquery/jquery-3.3.1.min.js"></script>
     <script src="popper/popper.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -325,4 +323,5 @@
     </script>
 </div>
 </body>
+
 </html>
