cambio de idioma
cambio de idioma
quite diseño graficos

--- a/english.html
+++ b/english.html
@@ -23,14 +23,14 @@
       <label for="check" class="checkbtn">
         <img src="img/portafolio/ham.png" alt="">
       </label>
-      <a href="index.html" class="enlace"><img src="img/women-in-tech.jpg" alt="" class="logo"></a>
-      <a href="english.html" class="aidioma"><img src="img/english.png" alt="" class="logo"></a>
+      <a href="english.html" class="enlace"><img src="img/women-in-tech.jpg" alt="" class="logo"></a>
+      <a href="index.html" class="aidioma"><img src="img/spanish.png" alt="" class="logo"></a>
       <ul>
-        <li><a for="menu" class="active" href="#sobrem">Sobre mi </a></li>
-        <li> <a href="#habi">Mis Habilidades</a></li>
-        <li><a href="#profesional">Desarrollo Profesional</a></li>
-        <li> <a href="#portfolio">Proyectos</a></li>
-        <li><a href="#contacto">Contacto</a> </li>
+        <li><a for="menu" class="active" href="#sobrem">About me</a></li>
+        <li> <a href="#habi">My Abilities</a></li>
+        <li><a href="#profesional">Professional Development</a></li>
+        <li> <a href="#portfolio">Projects</a></li>
+        <li><a href="#contacto">Contact</a> </li>
       </ul>
     </nav>
 
@@ -42,8 +42,8 @@
             <img src="img/yo/primera.jpg" class="imgintro">
           </div>
           <div class="name col-8 p-0 ">
-            <h1 id="title">Hola!</h1>
-            <h1 id="title"> mi nombre es</h1>
+            <h1 id="title">Hello!</h1>
+            <h1 id="title"> my name is</h1>
             <h1 id="title"> <strong>Naiceiry Morales</strong></h1>
             <p id="title">Developer Full-Stack</p>
           </div>
@@ -55,39 +55,40 @@
       </section>
       <div class="general col-7 d-flex">
 
-        <h5 class="pdescrip">
-          Soy desarrollador y diseñador web con 4 años de experiencia, cada problema que me consigo la convierto en una
-          solución tecnológica,
-          creo fielmente en la enorme ayuda de las tecnologías en el éxito de una empresa o actividad.<br> <br><br>
-          Mi logica es informática, soy autodidacta y lo que busco es poder seguir avanzando en el estudio de lenguajes
-          de
-          programación que me permitan aportar más en los
-          proyectos y de mejor manera. <br><br>
-          Soy una persona que me enfoco en el desarrollo personal y profesional, siempre con ganas de aprender y buena
-          actitud a la hora de afrontar retos. <br><br>
-          Siempre me ha gustado el estudio de los sistemas y desarrollo de los mismos, esta pasión natural es la que me
-          llevó a estudiar Informática para poder desempeñarme
-          profesionalmente a lo que me gusta.<br><br>
-          Por ello lo que busco es un trabajo que me permita crecer y me genere estabilidad para poder crear una
-          relación a
-          largo plazo y aportar todos mis conocimientos,
-          así como adquirirlos. <br><br>
-          Soy FullStack Developer, manejo <br>
-          HTML / CSS / Bootstrap / React /Flask <br>
-          Flux / Jest / Python / JavaScript <br>
-          PostgresSQL / MySQL / SQL / SQL Alchemy<br>
-          Git / Giyhub. <br>
-          <br><br>Tengo una Formación Profesional de grado superior en Informática, donde empecé estudiando
-          Foxpro / VisualBasic / PHP con MySQL. <br>
-          <br>He manejado profesionalmente en el diseño de paginas web
-          Wordpress<br>
-          así como su mantenimiento en cuanto a SEO y SEM
+        <h5 class="pdescript">
+          I am a web developer and designer with 4 years of experience, every problem I get I turn into a technological
+          solution,
+          I faithfully believe in the enormous help of technology in the success of a company or activity.<br> <br><br>
+          My logic is computer science, I am self-taught and what I am looking for is to be able to continue advancing
+          in the study of languages
+          of
+          programming that allow me to contribute more in the
+          projects and in a better way. <br><br>
+          I am a person who focuses on personal and professional development, always eager to learn and good
+          attitude when facing challenges. <br><br>
+          I have always liked the study of systems and their development, this natural passion is what
+          led me to study Computer Science to be able to perform
+          professionally to what I like.<br><br>
+          That is why what I am looking for is a job that allows me to grow and generates stability in order to create a
+          relation to
+          long term and contribute all my knowledge,
+          as well as purchase them. <br><br>
+          I'm a FullStack Developer, I handle <br>
+          HTML / CSS / Bootstrap / React / Flask <br>
+          Flux / Jest / Python / Javascript <br>
+          PostgreSQL / MySQL / SQL / SQL Alchemy<br>
+          Git/Gyhub. <br>
+          <br><br>I have a higher level Professional Training in Computer Science, where I started studying
+          Foxpro / VisualBasic / PHP with MySQL. <br>
+          <br>I have managed professionally in the design of web pages
+          WordPress<br>
+          as well as its maintenance in terms of SEO and SEM
         </h5>
       </div>
 
       <!---Mis habilidades---->
       <section class="secciones" id="habi">
-        <h2>Mis habilidades</h2>
+        <h2>My Abilities</h2>
       </section>
 
       <div class="contenedor1">
@@ -107,44 +108,42 @@
             <abbr title="Flux"><img src="img/Programacion/flux.png" class="habilidades"></abbr>
             <abbr title="JEST"><img src="img/Programacion/jest.png" class="habilidades"></abbr>
             <abbr title="Flask"><img src="img/Programacion/flask.png" class="habilidades"></abbr>
-          </div>  
+          </div>
         </div>
-
+      
         <div class="minicontent">
           <div class="front">
-            <h3>Base de Datos</h3>
+            <h3>Data Base</h3>
             <abbr title="MySQL"><img src="img/Programacion/mysql.png" class="habilidadesmp"></abbr>
             <abbr title="SQL Alchemy"><img src="img/Programacion/SQLA.png" class="habilidadesmp"></abbr>
             <abbr title="JWToken"><img src="img/Programacion/jwt.png" class="habilidadesp"></abbr>
           </div>
           <div class="front">
-            <h3>Pruebas y otros</h3>
-              <abbr title="github"><img src="img/Programacion/goth.png" class="habilidadesmp"></abbr>
-              <abbr title="Git"><img src="img/Programacion/git.png" class="habilidadesp"></abbr>
-              <abbr title="Insomnia"><img src="img/Programacion/insomnia.png" class="habilidadesp"></abbr>
-              <abbr title="Postman"><img src="img/Programacion/postman.png" class="habilidadesp"></abbr>
+            <h3>Testin and Others</h3>
+            <abbr title="github"><img src="img/Programacion/goth.png" class="habilidadesmp"></abbr>
+            <abbr title="Git"><img src="img/Programacion/git.png" class="habilidadesp"></abbr>
+            <abbr title="Insomnia"><img src="img/Programacion/insomnia.png" class="habilidadesp"></abbr>
+            <abbr title="Postman"><img src="img/Programacion/postman.png" class="habilidadesp"></abbr>
           </div>
         </div>
         <div class="minicontent front">
           <h3>Marketing</h3>
-            <abbr title="Gestion de campañas de Marketing"><img src="img/mar.png" class="marketing"></abbr>
-            <abbr title="wordpress"><img src="img/wordpress.svg" class="mark1"> </abbr>
-            <abbr title="SEM"><img src="img/seo sem.jpg" class="mark2"> </abbr>
+          <abbr title="Gestion de campañas de Marketing"><img src="img/mar.png" class="marketing"></abbr>
+          <abbr title="wordpress"><img src="img/wordpress.svg" class="mark1"> </abbr>
+          <abbr title="SEM"><img src="img/seo sem.jpg" class="mark2"> </abbr>
         </div>
       </div>
-
 
 
 
       <!---Desarrollo Profesional---->
       <section class="secciones" id="profesional">
         <!---Hacer Modales solo para los titulos, falta titulo de universidad, ---->
-        <h2>Desarrollo Profesional</h2>
+        <h2>Professional development</h2>
       </section>
       <div class="col-12 desarrollop">
         <div class=" botondescargar">
-          <a class="btn  btn-success " role="button" href="document/NAICEIRY.pdf">Descargar
-            Curriculum</a>
+          <a class="btn  btn-success " role="button" href="document/NAICEIRY.pdf">Discharge Resume</a>
         </div>
         <!-- fabricacion del modal https://www.youtube.com/watch?v=c3MbFWr-NT4  
                                                                                                                 GOOGLE FONT ME ENCANTA -->
@@ -179,7 +178,7 @@
 
       <!---PORTAFOLIO--->
       <section class="secciones" id="portfolio">
-        <h2>Proyectos </h2>
+        <h2>Projects </h2>
       </section>
 
       <!-- <p> arreglar jwtauthenticati que es de jacascrip <br>
@@ -194,7 +193,7 @@
               <img src="img/portafolio/WPlogo.png" alt="" />
               <div class="capa">
                 <h3>Wellput</h3>
-                <p>Alquiler de habitaciones de larga duracion</p>
+                <p>Long-term room rental</p>
                 <a href="https://w3llput.herokuapp.com/"> <img src="img/globe2.svg" class="logospequeños"></a>
                 <a href="https://github.com/Naiceiry/WellPut"> <img src="img/github.svg" class="logospequeños"></a>
               </div>
@@ -218,7 +217,7 @@
               <img src="img/portafolio/To-Do-List-Logo-for-Facebook.jpg" alt="" />
               <div class="capa">
                 <h3>ToDoList</h3>
-                <p>Lista de Que haceres</p>
+                <p>To Do List</p>
                 <a href="https://github.com/Naiceiry/ToDoList"> <img src="img/github.svg" class="logospequeño1"></a>
               </div>
             </figure>
@@ -250,13 +249,13 @@
       </div>
       <!---CONTACTO--->
       <section class="secciones" id="contacto">
-        <h2>Contacto </h2>
+        <h2>Contact </h2>
       </section>
 
       <div class="contenedorcontacto">
-        <div class="contacto"><a href="mailto:naiceirymp@gmail.com"> <img src="img/gmail.jpg"></a> </div>
+        <div class="contacto"><a href="mailto:developernay@gmail.com"> <img src="img/gmail.jpg"></a> </div>
         <div class="contacto"><a href="https://github.com/Naiceiry"> <img src="img/Programacion/goth.png"> </a></div>
-        <div class="contacto"><a href="https://api.whatsapp.com/send?phone=+34622142067"> <img src="img/wsapp.jpg"></a>
+        <div class="contacto"><a href="https://api.whatsapp.com/send?phone=+34722406321"> <img src="img/wsapp.jpg"></a>
         </div>
         <div class="contacto"><a href="https://www.linkedin.com/in/naiceiry-morales-68681017a/"> <img
               src="img/link.png"></a></div>
